--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <li class="tmenu"><a href="#profile" class="tab-profile"><i>&#x43;</i>Profile</a></li>
                         <li class="tmenu"><a href="#resume"><i>&#x3a;</i>Resume</a></li>
                         <li class="tmenu"><a href="#portfolio"><i>&#x38;</i>Portfolio</a></li>
-                        <li class="tmenu"><a href="#contact"><i>&#x21;</i>Contact</a></li>
+                        <li class="tmenu"><a href="#contact"><i>&#x21;</i>Contact Me!</a></li>
                     </ul>
                     <a class="prev" id="menu-prev" href="#">&#xe073;</a>
                     <a class="next" id="menu-next" href="#">&#xe076;</a>
